[gd_scene load_steps=11 format=2]

[ext_resource path="res://Bowser.gd" type="Script" id=1]
[ext_resource path="res://Assets/Character Assets/BowserW1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Character Assets/Bowser_Down.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "go_down",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.4167, 15.0833 )

[sub_resource type="Animation" id=4]
resource_name = "Crecer"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Nueva_Animacion"
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "dies"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bowser_Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 0.625 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16.25, 14.3518 )

[node name="Bowser" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 1 )

[node name="Bowser_Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.875, 0.805 )
frames = SubResource( 1 )

[node name="Bowser_Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -2.08333, 4.08332 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crecer = SubResource( 4 )
anims/Nueva_Animacion = SubResource( 3 )
anims/dies = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="Bot_Checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bot_Checker"]
position = Vector2( -2, 19 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.08333, 2.64824 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayerr_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Bot_Checker" to="." method="_on_Bot_Checker_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
